apps/ctxllm/overlays/staging/ctxllm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctxllm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: llm.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: ctxllm
                port:
                  number: 8088
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - llm.contextsuite.com
      secretName: llm-contextsuite-com-tls
